@@ -39,6 +39,7 @@
 	fixed uninitialized null/blob flags in sqlrclientprotocol::returnRow()
 	various variables are now properly typed (SQLLEN vs. SQLINTEGER) in the
 		odbc connection module
+	added "divider on/off" command to sqlrsh
 
 1.1.0 - updated to use charstring asprintf analogs
 	fixed uninitialized sendcolumninfo on server-side
